--- a/futures/Cargo.toml
+++ b/futures/Cargo.toml
@@ -23,12 +23,12 @@ travis-ci = { repository = "rust-lang-nursery/futures-rs" }
 appveyor = { repository = "rust-lang-nursery/futures-rs" }
 
 [dependencies]
-futures-core-preview = { path = "../futures-core", version = "0.3.0-alpha.11", default-features = false }
-futures-channel-preview = { path = "../futures-channel", version = "0.3.0-alpha.11", default-features = false }
-futures-executor-preview = { path = "../futures-executor", version = "0.3.0-alpha.11", default-features = false }
-futures-io-preview = { path = "../futures-io", version = "0.3.0-alpha.11", default-features = false }
-futures-sink-preview = { path = "../futures-sink", version = "0.3.0-alpha.11", default-features = false }
-futures-util-preview = { path = "../futures-util", version = "0.3.0-alpha.11", default-features = false }
+futures-core-preview = { path = "../futures-core", version = "=0.3.0-alpha.11", default-features = false }
+futures-channel-preview = { path = "../futures-channel", version = "=0.3.0-alpha.11", default-features = false }
+futures-executor-preview = { path = "../futures-executor", version = "=0.3.0-alpha.11", default-features = false }
+futures-io-preview = { path = "../futures-io", version = "=0.3.0-alpha.11", default-features = false }
+futures-sink-preview = { path = "../futures-sink", version = "=0.3.0-alpha.11", default-features = false }
+futures-util-preview = { path = "../futures-util", version = "=0.3.0-alpha.11", default-features = false }
 
 [dev-dependencies]
 pin-utils = "0.1.0-alpha.4"
